# tue

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  include.vcxitems  include.vcxitems.filters  index.md  libtue.sln  tests.exe.win32.vcxproj  tests.vcxproj  tests.win32.vcxproj  tue.sln  tue.vcxitems  tue.vcxitems.filters
docs/: Doxyfile  DoxygenLayout.xml  README.md  headers.md  index.md  namespaces.md  types.md
docs/functions/mat/: column.md  columns.md  constructor.md  conversion.md  data.md  identity.md  row.md  set_column.md  set_row.md  zero.md
docs/functions/math/: abs.md  axis_angle.md  comp_mult.md  conjugate.md  cos.md  cross.md  dot.md  equal.md  exp.md  greater.md  greater_equal.md  length.md  length2.md  less.md  less_equal.md  log.md  max.md  min.md  normalize.md  not_equal.md  ortho_mat.md  perspective_mat.md  pose_mat.md  pow.md  recip.md  rotation_mat.md  rotation_quat.md  rotation_vec.md  rsqrt.md  scale_mat.md  select.md  sin.md  sincos.md  sqrt.md  translation_mat.md  transpose.md  view_mat.md
docs/functions/pose2d/: constructor.md  conversion.md  identity.md  rotation.md  set_rotation.md  set_translation.md  translation.md
docs/functions/pose3d/: constructor.md  conversion.md  identity.md  rotation.md  set_rotation.md  set_translation.md  translation.md
docs/functions/quat/: constructor.md  conversion.md  data.md  identity.md  s.md  set_s.md  set_v.md  set_vs.md  set_w.md  set_x.md  set_xyzw.md  set_y.md  set_z.md  v.md  vs.md  w.md  x.md  xyzw.md  y.md  z.md
docs/functions/rect/: constructor.md  conversion.md  height.md  position.md  set_height.md  set_position.md  set_size.md  set_width.md  set_width_height.md  set_x.md  set_xy.md  set_y.md  size.md  width.md  width_height.md  x.md  xy.md  y.md
docs/functions/size2d/: constructor.md  conversion.md  height.md  set_height.md  set_width.md  width.md  zero.md
docs/functions/size3d/: constructor.md  conversion.md  depth.md  height.md  set_depth.md  set_height.md  set_width.md  width.md  zero.md
docs/functions/vec/: a.md  b.md  constructor.md  conversion.md  data.md  g.md  r.md  rg.md  rgb.md  rgba.md  set_a.md  set_b.md  set_g.md  set_r.md  set_rg.md  set_rgb.md  set_rgba.md  set_w.md  set_x.md  set_xy.md  set_xy_rg.md  set_xyz.md  set_xyz_rgb.md  set_xyzw.md  set_y.md  set_z.md  w.md  w_axis.md  x.md  x_axis.md  xy.md  xy_rg.md  xyz.md  xyz_rgb.md  xyzw.md  y.md  y_axis.md  z.md  z_axis.md  zero.md
docs/headers/: bool.md  mat.md  math.md  pose2d.md  pose3d.md  quat.md  rect.md  simd.md  size2d.md  size3d.md  unused.md  vec.md
docs/namespaces/: tue.md
docs/namespaces/tue/: math.md
docs/operators/mat/: addition.md  addition_assignment.md  bitwise_and.md  bitwise_and_assignment.md  bitwise_not.md  bitwise_or.md  bitwise_or_assignment.md  bitwise_xor.md  bitwise_xor_assignment.md  division.md  division_assignment.md  equal_to.md  equality.md  inequality.md  modulo.md  modulo_assignment.md  multiplication.md  multiplication_assignment.md  not_equal_to.md  post_decrement.md  post_increment.md  pre_decrement.md  pre_increment.md  shift_left.md  shift_left_assignment.md  shift_right.md  shift_right_assignment.md  subscript.md  subtraction.md  subtraction_assignment.md  unary_minus.md  unary_plus.md
docs/operators/pose2d/: equality.md  inequality.md
docs/operators/pose3d/: equality.md  inequality.md
docs/operators/quat/: equality.md  inequality.md  multiplication.md  multiplication_assignment.md  subscript.md
docs/operators/rect/: equality.md  inequality.md
docs/operators/size2d/: equality.md  inequality.md
docs/operators/size3d/: equality.md  inequality.md
docs/operators/vec/: addition.md  addition_assignment.md  bitwise_and.md  bitwise_and_assignment.md  bitwise_not.md  bitwise_or.md  bitwise_or_assignment.md  bitwise_xor.md  bitwise_xor_assignment.md  division.md  division_assignment.md  equality.md  (+18 more)
docs/types/: boolx4.md  floatx4.md
include/tue/: bool.hpp  float32x4.hpp  mat.hpp  math.hpp  nocopy_cast.hpp  pose2d.hpp  pose3d.hpp  quat.hpp  rect.hpp  simd.hpp  size2d.hpp  size3d.hpp  sized_bool.hpp  transform.hpp  unused.hpp  vec.hpp
src/android/: android.vcxproj
src/common/: common.vcxitems  vec.hpp  vec4.hpp
src/unix.common/: unix.common.vcxitems
src/windows.common/: windows.common.vcxitems
src/windows.desktop/: windows.desktop.vcxproj
src/windows.phone/: windows.phone.vcxproj
src/windows.store/: windows.store.vcxproj
src/windows.universal/: windows.universal.vcxproj
test/: android.tests.vcxproj  float32x4.tests.cpp  mattransform.tests.cpp  quat.tests.cpp  size2d.tests.cpp  tests.vcxitems  tests.vcxitems.filters  vec3.tests.cpp  vec4.tests.cpp  windows.desktop.tests.vcxproj
tests/: bool.tests.cpp  bool32x4.tests.cpp  boolx4.tests.cpp  float32x4.tests.cpp  floatx4.tests.cpp  main.cpp  mat2xR.tests.cpp  mat3xR.tests.cpp  mat4xR.tests.cpp  math.tests.cpp  matmult.tests.cpp  mattransform.tests.cpp  nocopy_cast.tests.cpp  pose2d.tests.cpp  pose3d.tests.cpp  quat.tests.cpp  rect.tests.cpp  simd.tests.cpp  simd2.tests.cpp  size2d.tests.cpp  size3d.tests.cpp  sized_bool.tests.cpp  test_case.cpp  test_case.hpp  test_failure.cpp  test_failure.hpp  test_runner.cpp  test_runner.hpp  tests.android.vcxproj  tests.clang.vcxproj  tests.common.vcxitems  tests.common.vcxitems.filters  tests.msvc.vcxproj  tests.vcxproj  transform.tests.cpp  tue.tests.hpp  unused.tests.cpp  vec.tests.cpp  vec2.tests.cpp  vec3.tests.cpp  (+1 more)
(+52 files in other folders)
